<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">DM Assist</string>
	<string name="displayAboutBox">About</string>
	<string name="authorship">by Ron \&quot;Ziroby\&quot; Romero</string>
    <string name="author_url">http://www.linkedin.com/in/ronromero</string> 
    <string name="author_blurb">&lt;b&gt;Ron \"Ziroby\" Romero&lt;/b&gt; is a Senior Software Developer / Architect 
    specializing in Agile development.
    &lt;ul&gt;
        &lt;lI&gt;Expert and advocate for Agile software development.&lt;/lI&gt;&lt;br&gt;
        &lt;li&gt;Architect, Team Lead, formal trainer, and always a leader, an informal trainer, and a mentor.&lt;/li&gt;&lt;br&gt;
        &lt;li&gt;Fifteen years development experience in Java, C#, C++, Android, SQL, etc.&lt;/li&gt;&lt;br&gt;
        &lt;li&gt;Available for development work and Agile consulting, especially in the Austin, Texas area.&lt;/li&gt;&lt;br&gt;
    &lt;/ul&gt; 
    </string>
<string name="text_color">#111111</string>
<string name="add_creature">Add Creature</string>
<string name="add_effect">Add Effect</string>
<string name="help">Help</string>
<string name="name">Name:</string>
<string name="init_roll">Initiative Roll:</string>
<string name="hit_points">Hit Points</string>
<string name="abbrev">Abbreviation:</string>
<string name="subdual">Subdual:</string>
<string name="add">Add</string>
<string name="rounds">Rounds:</string>
<string name="type">Type:</string>
<string name="remove_item">Remove</string>
<string name="delete_item">Delete</string>
<string name="save_item">Save</string>
<string name="load_item">Load</string>
<string name="heal_damage">Damage / Heal</string>
<string name="about_the_author">About the Author...</string>
<string name="gnu_blurb">DM assist is free software, and you are welcome to redistribute it under certain conditions.</string>
<string name="display_gpl">GNU Public License... </string>
<string name="ogl_blurb">DM Assist contains content licesnsed under the Open Game License</string>
<string name="display_ogl">Open Game License... </string>
<string name="copyright_blurb">Copyright (c) 2009-2011 Ron &quot;Ziroby&quot; Romero; portions copyright by others</string>
<string name="display_copyright">Display copyrights... </string>
<string name="subdue_unsubdue">Subdue/Heal Subdual</string>
<string name="damage">Damage</string>
<string name="heal">Heal</string>
<string name="cancel">Cancel</string>
<string name="damage_heal_by">Damage/heal by: </string>
<string name="subdue_unsubdue_by">Subdue/heal subdual by: </string>
<string name="subdue">Subdue</string>
<string name="unsubdue">Heal Subdual</string>
<string name="ok">OK</string>
<string name="clear_all">Clear All</string>
    <string name="no_entities">&lt;h1&gt;DM Assist&lt;/h1&gt;
    Welcome to DM Assist, a combat initiative tracker. &lt;p&gt;
    &lt;large&gt;Select &lt;b&gt;Add Creature&lt;/b&gt; or &lt;b&gt;Add Effect&lt;/b&gt; 
    from the menu to fill the list.&lt;p&gt;  
    Use &lt;b&gt;Add Creature&lt;/b&gt; for monsters, NPCs, and PCs.  
    Use &lt;b&gt;Add Effect&lt;/b&gt; 
    for time-limited effects, such as spells or &lt;i&gt;Summon Monster.&lt;/i&gt;  &lt;p&gt;
    You may also load 
    and save, and help is available from the menu.
    &lt;/large&gt;</string>
    <string name="no_entities_in_db">
    There are no creatures or effects saved.
    </string>
<string name="add_sample_data">Add Sample Data</string>
<string name="settings">Settings</string>
<string name="init_dice_hint">mod</string>
<string name="init_roll_hint">roll</string>
<string name="hint_name">name</string>
<string name="hint_abbrev">abbrev</string>
<string name="hint_init">init roll</string>
<string name="init_edit">init</string>
<string name="hp_edit">hp</string>
<string name="hint_hit_points">hit points</string>
<string name="hint_subdual">subdual damage</string>
<string name="rnds_edit">rnds</string>
<string name="hint_rounds_left">rounds left</string>
<string name="labe_type">type </string>
<string name="label_type">type</string>
<string name="label_init">init</string>
<string name="hint_init_roll">init roll</string>
<string name="hint_hp">hp</string>
<string name="label_hp">hp</string>
<string name="hint_hit_dice">hit dice</string>
<string name="label_sub">sub</string>
<string name="label_rnds">rnds</string>
    <string name="hint_init_modifier">init modifier</string>
    <string name="error_no_entity_types">ERROR: No entity types</string>
    <string name="label2_init">init:</string>
    <string name="label2_hp">hp:</string>
    <string name="label2_subdual">sub:</string>
    <string name="label2_rounds">rnds:</string>
    <string name="button_reset">Reset</string>
    <string name="button_next">Next</string>
</resources>
